convert to basic Go SQL
